2000-04-17  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (search_text): implemented backward substring
	search, also search backwards thru childern
	(search_text): fixed ClueFlow traversing, fixed backward substring
	and updated regex search for backward search

2000-04-16  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (search): set regular when showing dialog again

2000-04-16  Larry Ewing  <lewing@helixcode.com>

	* testgtkhtml.c (stop_cb): stop the stream handler takes care of
	killing the stream.

	* htmlengine.c (html_engine_select_region): remove small leak.
	
2000-04-17  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c
	(search): Added missing `GTK_WIDGET()' cast.

	* htmlengine-edit-cut.c: Rewritten to use the new cursor/region
	handling code.  Also implemented support for undo and redo.

	* htmlengine-edit-paste.c
	(closure_destroy): Use `html_cut_buffer_destroy ()'.
	(html_engine_paste_buffer): New function.

	* htmlengine-edit-paste.c
	(action_data_from_cut_buffer): Use the new function
	`html_engine_cut_buffer_dup()'.

	* htmlengine-cutbuffer.c
	(html_engine_cut_buffer_destroy): Removed arg @engine.
	(html_engine_cut_buffer_dup): New function.

2000-04-17  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine.c (html_engine_destroy): Remove the timeout
	associated with `timerId', if any.

2000-04-15  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlclue.c
	(destroy): Made the code readable.

	* htmlengine-edit-delete.c
	(delete_different_parent): Make the style of the second paragraph
	"win" over that of the first one, so that inserting a paragraph
	break is specular to removing it.

	* htmlengine-edit-paste.c
	(update_cursor_position): Changed to return the number added to
	the cursor's position counter.
	(do_paste): New function, doing all of the pasting work previously
	done by `html_engine_paste()'.  Also return the number of
	character elements pasted.
	(do_undo): New function, implementing the "undo" action.